tests/errors/super_no_superclass.efto
// Cannot use 'super' in a class with no superclass.
class Foo {
  bar() {
    super.baz(); // expect error: [line 4:5] Error at 'super': Can't use 'super' in a class with no superclass.
  }
}
